Trailhead/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <picklist>
            <picklistValues>
                <fullName>happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annoyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>frustrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>